--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,7 +1,16 @@
 body{
 
-    padding: 50px;
+    padding: 5vw;
     font-family: "Patrick Hand", cursive;
+}
+
+#top-nav{
+
+    display: flex;
+    justify-content: space-between;
+
+    padding: 0 10px;
+    padding-bottom: 30px;
 }
 
 #header{
@@ -12,9 +21,36 @@ body{
     margin: 25px 0;
 }
 
+#header-info{
+
+    display: flex;
+    flex-direction: column;
+    
+    align-items: end;
+    
+    font-size: 1.1rem;
+}
+
+#author{
+
+    text-decoration: none;
+    color: black;
+}
+
+#author:hover{
+    text-decoration: underline;
+}
+
+#post-count{
+
+    margin: 0;
+}
+
 .posts-container{
 
     display: flex;
+    justify-content: center;
+    
     gap: 10px;
 }
 
@@ -62,5 +98,7 @@ body{
 }
 
 .post-timestamp{
+
+    align-self: flex-end;
     font-size: 0.9rem;
 }
