Established Dummy Routes

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,7 +13,7 @@ html
         div#top-nav
             
             div#header-container
-                a#header Blog API 
+                a(href="/")#header Blog API 
 
             div#header-info
            
