--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -16,9 +16,16 @@ body{
 #header{
 
     font-family: "Itim", cursive;
+    
+    text-decoration: none;
+    color: black;
   
     font-size: 2.5rem;
     margin: 25px 0;
+}
+
+#header:hover{
+    text-decoration: underline;
 }
 
 #header-info{
