Post Detail Page Implemantation

--- a/views/index.pug
+++ b/views/index.pug
@@ -21,4 +21,4 @@ block content
                         else
                             div.post-body #{post.body} 
 
-                    div.post-timestamp #{post.timestamp}
+                    div.post-timestamp #{post.formattedTimestamp}
