--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -109,3 +109,42 @@ body{
     align-self: flex-end;
     font-size: 0.9rem;
 }
+
+#post-detail-container, #comments-container, .comment{
+    padding: 0 10px;
+}
+
+#post-detail-container{
+
+    border: 1px solid gray;
+    border-radius: 10px;
+
+    padding: 25px;
+
+    display: flex;
+    flex-direction: column;
+
+    gap: 50px;
+}
+
+.comment{
+
+    display: flex;
+    gap: 5px;
+}
+
+.comment-username a{
+
+    text-decoration: none;
+    color: black;
+    
+    font-style: italic;
+}
+
+.comment-username a:hover{
+    text-decoration: underline;
+}
+
+#no-comments{
+    padding-left: 10px;
+}
