--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -110,7 +110,7 @@ body{
     font-size: 0.9rem;
 }
 
-#post-detail-container, #comments-container, .comment{
+#post-detail-container, #comments-container, .comment, #comment-creator{
     padding: 0 10px;
 }
 
@@ -137,7 +137,7 @@ body{
 
     text-decoration: none;
     color: black;
-    
+
     font-style: italic;
 }
 
@@ -147,4 +147,39 @@ body{
 
 #no-comments{
     padding-left: 10px;
+}
+
+#form-container form input, #form-container form textarea, #form-container form button{
+
+    border: 1px solid gray;
+    border-radius: 10px;
+
+    padding: 7.5px;
+    margin: 1px;
+
+    font-family: "Patrick Hand", cursive;
+}
+
+#body-input{
+    margin-bottom: 0;
+}
+
+#email-input{
+    width: 150px;
+}
+
+#post-input{
+    width: 130px;
+}
+
+#submit-button{
+    background-color: white;
+}
+
+#submit-button:hover{
+
+    cursor: pointer;
+
+    background-color: black;
+    color: white;
 }
